--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-<!-- Happy coding -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My blog</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+
+  <body>
+    <h1>Head</h1>
+    <h2>Article heading 2</h2>
+    <h3>Article heading 3</h3>
+
+    <p>
+      Cillum ex aliqua aliquip quis ipsum. Sint in ad amet labore irure quis
+      dolore ullamco cupidatat. Ex dolore labore tempor in pariatur amet
+      consectetur ex occaecat. Incididunt amet duis do esse sit duis culpa ut
+      ea. Pariatur eu magna laborum nulla culpa ex exercitation ut.
+    </p>
+
+    <ul>
+      <li>Artilce List Item (li)</li>
+      <li>Artilce List Item (li)</li>
+      <li>Artilce List Item (li)</li>
+      <li>Artilce List Item (li)</li>
+    </ul>
+
+    <ol>
+      <li>Artilce List Item (li)</li>
+      <li>Artilce List Item (li)</li>
+      <li>Artilce List Item (li)</li>
+      <li>Artilce List Item (li)</li>
+    </ol>
+  </body>
+</html>
