--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My blog</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
-    <h1>Head</h1>
-    <h2>Article heading 2</h2>
-    <h3>Article heading 3</h3>
+    <header id="main-header">
+      <p><strong>Header</strong></p>
+    </header>
+    <h1>Lessons after 4 weeks learning to code</h1>
 
     <p>
       Cillum ex aliqua aliquip quis ipsum. Sint in ad amet labore irure quis
@@ -33,5 +34,15 @@
       <li>Artilce List Item (li)</li>
       <li>Artilce List Item (li)</li>
     </ol>
+
+    <blockquote>
+      Incididunt voluptate ullamco velit quis irure nisi excepteur proident. Non
+      quis ea velit ad commodo elit culpa excepteur fugiat. Sit ex eiusmod ad
+      cillum ex reprehenderit aliquip est.
+    </blockquote>
+
+    <footer id="main-footer">
+      <p>Footer</p>
+    </footer>
   </body>
 </html>
