add: blog post UI

--- a/index.html
+++ b/index.html
@@ -6,40 +6,71 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My blog</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
 
   <body>
     <header id="main-header">
-      <p><strong>Header</strong></p>
+      <p>Header</p>
     </header>
-    <h1>Lessons after 4 weeks learning to code</h1>
 
-    <p>
-      Cillum ex aliqua aliquip quis ipsum. Sint in ad amet labore irure quis
-      dolore ullamco cupidatat. Ex dolore labore tempor in pariatur amet
-      consectetur ex occaecat. Incididunt amet duis do esse sit duis culpa ut
-      ea. Pariatur eu magna laborum nulla culpa ex exercitation ut.
-    </p>
+    <div class="container">
+      <h1>Lessons after 4 weeks learning to code</h1>
 
-    <ul>
-      <li>Artilce List Item (li)</li>
-      <li>Artilce List Item (li)</li>
-      <li>Artilce List Item (li)</li>
-      <li>Artilce List Item (li)</li>
-    </ul>
+      <p>
+        Cillum ex aliqua aliquip quis ipsum. Sint in ad amet labore irure quis
+        dolore ullamco cupidatat. Ex dolore labore tempor in pariatur amet
+        consectetur ex occaecat. Incididunt amet duis do esse sit duis culpa ut
+        ea. Pariatur eu magna laborum nulla culpa ex exercitation ut.
+      </p>
 
-    <ol>
-      <li>Artilce List Item (li)</li>
-      <li>Artilce List Item (li)</li>
-      <li>Artilce List Item (li)</li>
-      <li>Artilce List Item (li)</li>
-    </ol>
+      <h2>The first two weeks</h2>
 
-    <blockquote>
-      Incididunt voluptate ullamco velit quis irure nisi excepteur proident. Non
-      quis ea velit ad commodo elit culpa excepteur fugiat. Sit ex eiusmod ad
-      cillum ex reprehenderit aliquip est.
-    </blockquote>
+      <p>
+        Cillum ex aliqua aliquip quis ipsum. Sint in ad amet labore irure quis
+        dolore ullamco cupidatat. Ex dolore labore tempor in pariatur amet
+        consectetur ex occaecat. Incididunt amet duis do esse sit duis culpa ut
+        ea. Pariatur eu magna laborum nulla culpa ex exercitation ut.
+      </p>
+
+      <ul>
+        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+      </ul>
+
+      <p>
+        Incididunt voluptate ullamco velit quis irure nisi excepteur proident.
+        Non quis ea velit ad commodo elit culpa excepteur fugiat. Sit ex eiusmod
+        ad cillum ex reprehenderit aliquip est.
+      </p>
+
+      <blockquote>
+        "Nisi sunt ad dolore et adipisicing deserunt dolore cillum. Duis amet
+        commodo nostrud cillum ullamco ex deserunt officia cupidatat sunt
+        reprehenderit pariatur incididunt est."
+      </blockquote>
+
+      <img
+        src="https://cdn.theatlantic.com/thumbor/W544GIT4l3z8SG-FMUoaKpFLaxE=/0x131:2555x1568/1600x900/media/img/mt/2017/06/shutterstock_319985324/original.jpg"
+      />
+
+      <figcaption>Image Description</figcaption>
+
+      <h2>The last two weeks</h2>
+
+      <p>
+        Incididunt voluptate ullamco velit quis irure nisi excepteur proident.
+        Non quis ea velit ad commodo elit culpa excepteur fugiat. Sit ex eiusmod
+        ad cillum ex reprehenderit aliquip est.
+      </p>
+    </div>
 
     <footer id="main-footer">
       <p>Footer</p>
