--- a/article.html
+++ b/article.html
@@ -12,16 +12,13 @@
     <section class="section-md">
       <div class="container-md article">
         <h1>Lessons after 4 weeks learning to code</h1>
-
         <p>
           Cillum ex aliqua aliquip quis ipsum. Sint in ad amet labore irure quis
           dolore ullamco cupidatat. Ex dolore labore tempor in pariatur amet
           consectetur ex occaecat. Incididunt amet duis do esse sit duis culpa
           ut ea. Pariatur eu magna laborum nulla culpa ex exercitation ut.
         </p>
-
         <h2>The first two weeks</h2>
-
         <p>
           Cillum ex aliqua aliquip quis ipsum. Sint in ad amet labore irure quis
           dolore ullamco cupidatat. Ex dolore labore tempor in pariatur amet
@@ -43,9 +40,11 @@
         </p>
 
         <blockquote>
-          "Nisi sunt ad dolore et adipisicing deserunt dolore cillum. Duis amet
-          commodo nostrud cillum ullamco ex deserunt officia cupidatat sunt
-          reprehenderit pariatur incididunt est."
+          <em>
+            "Nisi sunt ad dolore et adipisicing deserunt dolore cillum. Duis
+            amet commodo nostrud cillum ullamco ex deserunt officia cupidatat
+            sunt reprehenderit pariatur incididunt est."
+          </em>
         </blockquote>
 
         <figure>
