--- a/article.html
+++ b/article.html
@@ -7,8 +7,38 @@
     <title>Article</title>
     <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
-
   <body>
+    <header class="header">
+      <div class="container-md">
+        <nav class="navbar">
+          <a
+            href="/index.html"
+            class="navbar__logo heading-md semibold text-decoration-none"
+          >
+            <span> Jorge Ross </span>
+          </a>
+          <ul class="navbar__links list-style-none">
+            <li>
+              <a href="article.html" class="link text-md semibold">Articles</a>
+            </li>
+            <li>
+              <a href="#" class="link text-md semibold">Portfolio</a>
+            </li>
+            <li>
+              <a href="about.html" class="link text-md semibold">About</a>
+            </li>
+            <li>
+              <a
+                href="#"
+                class="button button--primary button--sm text-decoration-none ml-4"
+                >Contact Me</a
+              >
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
     <section class="section-md">
       <div class="container-md article">
         <h1>Lessons after 4 weeks learning to code</h1>
@@ -61,5 +91,14 @@
         </p>
       </div>
     </section>
+
+    <footer class="footer">
+      <div class="container-md footer__content">
+        <h2 class="heading-xl semibold footer__content__title">
+          Can I Help you?
+        </h2>
+        <button class="button button--primary">Get in touch!</button>
+      </div>
+    </footer>
   </body>
 </html>
