add hobbies to about

--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
       </div>
     </section>
 
-    <main class="section-md article-summary">
+    <section class="section-md article-summary">
       <div class="container-lg">
         <div class="article-summary__header">
           <h2 class="heading-lg semibold">My Skills</h2>
@@ -115,14 +115,58 @@
             </p>
           </div>
         </div>
+        </div> 
+      </div>
+    </section>
+
+    <section class="section-padding-md about-hobbies bg-color-dark">
+      <div class="container-lg">
+        <div class="about-hobbies__header">
+          <h2 class="heading-lg semibold">My Hobbies</h2>
+        </div>
+        <div class="about-hobbies__content">
+          <div class="about-hobbies__card">
+            <figure>
+              <img src="assets/Images/imag2.png">
+            </figure>
+          </div>
+          <div class="about-hobbies__card">
+            <h3 class="heading-md semibold">Food</h3>
+            <p class="text-xl light">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ullamcorper cursus at viverra netus mauris, fermentum felis.
+            </p>
+          </div>
+          <div class="about-hobbies__card">
+            <figure>
+              <img src="assets/Images/image 4.png">
+            </figure>
+          </div>
+          <div class="about-hobbies__card">
+            <h3 class="heading-md semibold">Travel</h3>
+            <p class="text-xl light">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ullamcorper cursus at viverra netus mauris, fermentum felis.
+            </p>
+          </div>
+          <div class="about-hobbies__card">
+            <figure>
+              <img src="assets/Images/image 5.png">
+            </figure>
+          </div>
+          <div class="about-hobbies__card">
+            <figure>
+              <img src="assets/Images/image 3.png">
+            </figure>
+          </div>
         </div>
       </div>
-    </main>
+      
+      
+    </section>
 
     <footer class="footer">
       <div class="container-lg footer__content">
         <h2 class="heading-xl semibold footer__content__title">
-          Can I Help you?
+          Can I help you?
         </h2>
         <button class="button button--primary">Get in touch!</button>
       </div>
