--- a/article.html
+++ b/article.html
@@ -95,7 +95,7 @@
     <footer class="footer">
       <div class="container-md footer__content">
         <h2 class="heading-xl semibold footer__content__title">
-          Can I Help you?
+          Can I help you?
         </h2>
         <button class="button button--primary">Get in touch!</button>
       </div>
