add inputs and contact title

--- a/contact-me.html
+++ b/contact-me.html
@@ -40,7 +40,16 @@
     </header>
 
     <section class="section-padding-md bg-color-background">
-      <div class="container-lg"></div>
+      <div class="container-lg">
+        <div class="contact-me__title">
+          <h2 class="heading-xl semibold">Contact Me</h2>
+          <p class="text-lg light">
+            Looking to expand your team? Or do you need a web developer for a
+            specific project? If I can help you in any way don't hesitate to
+            fill this form.
+          </p>
+        </div>
+      </div>
     </section>
   </body>
 </html>
