add inputs to contact me

--- a/contact-me.html
+++ b/contact-me.html
@@ -15,7 +15,7 @@
             href="/index.html"
             class="navbar__logo heading-md semibold text-decoration-none"
           >
-            <span> Jorge Ross </span>
+            <span>Jorge Ross</span>
           </a>
           <ul class="navbar__links list-style-none">
             <li>
@@ -48,6 +48,78 @@
             specific project? If I can help you in any way don't hesitate to
             fill this form.
           </p>
+        </div>
+        <div class="contact-me__content">
+          <div class="contact-me__card">
+            <label class="overline text-xs light">
+              first name
+              <input
+                class="input"
+                type="text"
+                name="username"
+                placeholder="John"
+              />
+            </label>
+          </div>
+
+          <div class="contact-me__card">
+            <label class="overline text-xs light">
+              last name
+              <input
+                class="input"
+                type="text"
+                name="username"
+                placeholder="Doe"
+              />
+            </label>
+          </div>
+
+          <div class="contact-me__card">
+            <label class="overline text-xs light">
+              email
+              <input
+                class="input"
+                type="email"
+                name="username"
+                placeholder="john@mail.com"
+              />
+            </label>
+          </div>
+
+          <div class="contact-me__card">
+            <label class="overline text-xs light">
+              company
+              <input
+                class="input"
+                type="text"
+                name="username"
+                placeholder="Company SA"
+              />
+            </label>
+          </div>
+
+          <div class="contact-me__card">
+            <label class="overline text-xs light">
+              phone
+              <input
+                class="input"
+                type="tel"
+                name="username"
+                placeholder="99 9555 6262"
+              />
+            </label>
+          </div>
+
+          <div class="contact-me__card">
+            <label class="overline text-xs light">
+              country
+              <select class="select">
+                <option selected disabled hidden>Select one option</option>
+                <option value="1">México</option>
+                <option value="2">Perú</option>
+              </select>
+            </label>
+          </div>
         </div>
       </div>
     </section>
