--- a/article.html
+++ b/article.html
@@ -11,13 +11,22 @@
     <header class="header">
       <div class="container-md">
         <nav class="navbar">
+          <input type="checkbox" id="menu-mobile" />
           <a
             href="/index.html"
             class="navbar__logo heading-md semibold text-decoration-none"
           >
             <span> Jorge Ross </span>
+
+            <label for="menu-mobile" id="toggle-close">
+              <i class="ri-close-fill ri-sm"></i>
+            </label>
+
+            <label for="menu-mobile" id="toggle-open">
+              <i class="ri-menu-fill ri-sm"></i>
+            </label>
           </a>
-          <ul class="navbar__links list-style-none">
+          <ul class="expandable navbar__links list-style-none">
             <li>
               <a href="article.html" class="link text-md semibold">Articles</a>
             </li>
@@ -94,10 +103,14 @@
 
     <footer class="footer">
       <div class="container-md footer__content">
-        <h2 class="heading-xl semibold footer__content__title">
+        <h2 class="heading-lg semibold footer__content__title">
           Can I help you?
         </h2>
-        <button class="button button--primary">Get in touch!</button>
+        <a
+          href="contact-me.html"
+          class="button button--primary text-decoration-none"
+          >Get in touch!</a
+        >
       </div>
     </footer>
   </body>
