add: portfolio.html

--- a/contact-me.html
+++ b/contact-me.html
@@ -28,13 +28,13 @@
           </a>
           <ul class="expandable navbar__links list-style-none">
             <li>
+              <a href="about.html" class="link text-md semibold">About</a>              
+            </li>
+            <li>
+              <a href="portfolio.html" class="link text-md semibold">Portfolio</a>
+            </li>
+            <li>
               <a href="article.html" class="link text-md semibold">Articles</a>
-            </li>
-            <li>
-              <a href="#" class="link text-md semibold">Portfolio</a>
-            </li>
-            <li>
-              <a href="about.html" class="link text-md semibold">About</a>
             </li>
             <li>
               <a
@@ -50,8 +50,8 @@
 
     <section class="section-padding-md bg-color-background">
       <div class="container-lg">
-        <div class="contact-me__title">
-          <h2 class="heading-xl semibold">Contact Me</h2>
+        <h2 class="heading-xl semibold center">Contact Me</h2>
+        <div class="p-contact">
           <p class="text-lg light">
             Looking to expand your team? Or do you need a web developer for a
             specific project? If I can help you in any way don't hesitate to
