--- a/article.html
+++ b/article.html
@@ -28,13 +28,15 @@
           </a>
           <ul class="expandable navbar__links list-style-none">
             <li>
-              <a href="article.html" class="link text-md semibold">Articles</a>
-            </li>
-            <li>
-              <a href="#" class="link text-md semibold">Portfolio</a>
-            </li>
-            <li>
               <a href="about.html" class="link text-md semibold">About</a>
+            </li>
+            <li>
+              <a href="portfolio.html" class="link text-md semibold"
+                >Portfolio</a
+              >
+            </li>
+            <li>
+              <a href="article.html" class="link text-md semibold">Articles</a>
             </li>
             <li>
               <a
