fixed: svg images

--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
       </div>
     </section>
 
-    <section class="section-md">
+    <section class="section-md bg-color-background">
       <div class="container-lg">
         <div class="about-summary__title">
           <h2 class="heading-lg semibold">My Skills</h2>
