--- a/portfolio.html
+++ b/portfolio.html
@@ -51,9 +51,9 @@
       </div>
     </header>
 
-    <section class="section-padding-md bg-color-port-background">
+    <section class="section-padding-md bg-color-background">
       <div class="container-lg">
-        <h2 class="heading-lg semibold center">Project Portfolio</h2>
+        <h2 class="heading-lg semibold center">🔥Project Portfolio🔥</h2>
         <p class="text-lg regular center">Practice builds mastery</p>
         <div class="portfolio__content">
           <div class="portfolio__card">
@@ -89,12 +89,14 @@
           </div>
           <div class="portfolio__card">
             <div class="icons-port">
-              <svg><use xlink:href="#terminal" /></svg>
-              <svg><use xlink:href="#ruby" /></svg>
-              <svg><use xlink:href="#github" /></svg>
-            </div>
-            <div class="icon-corner">
-              <svg><use xlink:href="#arrow" /></svg>
+              <div class="icons-left">
+                <svg><use xlink:href="#terminal" /></svg>
+                <svg><use xlink:href="#ruby" /></svg>
+                <svg><use xlink:href="#github" /></svg>
+              </div>
+              <div class="icon-corner">
+                <svg><use xlink:href="#arrow" /></svg>
+              </div>
             </div>
             <h3 class="heading-xs semibold">Pokemon Ruby</h3>
             <p class="text-lg light">
@@ -115,12 +117,14 @@
           </div>
           <div class="portfolio__card">
             <div class="icons-port">
-              <svg><use xlink:href="#terminal" /></svg>
-              <svg><use xlink:href="#ruby" /></svg>
-              <svg><use xlink:href="#github" /></svg>
-            </div>
-            <div class="icon-corner">
-              <svg><use xlink:href="#arrow" /></svg>
+              <div class="icons-left">
+                <svg><use xlink:href="#terminal" /></svg>
+                <svg><use xlink:href="#ruby" /></svg>
+                <svg><use xlink:href="#github" /></svg>
+              </div>
+              <div class="icon-corner">
+                <svg><use xlink:href="#arrow" /></svg>
+              </div>
             </div>
             <h3 class="heading-xs semibold">CLIn Boards</h3>
             <p class="text-lg light">
@@ -141,12 +145,14 @@
           </div>
           <div class="portfolio__card">
             <div class="icons-port">
-              <svg><use xlink:href="#terminal" /></svg>
-              <svg><use xlink:href="#ruby" /></svg>
-              <svg><use xlink:href="#github" /></svg>
-            </div>
-            <div class="icon-corner">
-              <svg><use xlink:href="#arrow" /></svg>
+              <div class="icons-left">
+                <svg><use xlink:href="#terminal" /></svg>
+                <svg><use xlink:href="#ruby" /></svg>
+                <svg><use xlink:href="#github" /></svg>
+              </div>
+              <div class="icon-corner">
+                <svg><use xlink:href="#arrow" /></svg>
+              </div>
             </div>
             <h3 class="heading-xs semibold">CLIvia Generator</h3>
             <p class="text-lg light">
