add article pages

--- a/article.html
+++ b/article.html
@@ -104,7 +104,7 @@
     </section>
 
     <footer class="footer">
-      <div class="container-md footer__content">
+      <div class="container-lg footer__content">
         <h2 class="heading-lg semibold footer__content__title">
           Can I help you?
         </h2>
