--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,11 @@
                 <svg><use xlink:href="#github" /></svg>
               </div>
               <div class="icon-corner">
-                <svg><use xlink:href="#arrow" /></svg>
+                <a href="CalenCLI.html">
+                  <svg>
+                    <use xlink:href="#arrow" />
+                  </svg>
+                </a>
               </div>
             </div>
             <h3 class="heading-xs semibold">CalenCLI</h3>
@@ -95,7 +99,11 @@
                 <svg><use xlink:href="#github" /></svg>
               </div>
               <div class="icon-corner">
-                <svg><use xlink:href="#arrow" /></svg>
+                <a href="Pokemon-Ruby.html">
+                  <svg>
+                    <use xlink:href="#arrow" />
+                  </svg>
+                </a>
               </div>
             </div>
             <h3 class="heading-xs semibold">Pokemon Ruby</h3>
@@ -123,7 +131,11 @@
                 <svg><use xlink:href="#github" /></svg>
               </div>
               <div class="icon-corner">
-                <svg><use xlink:href="#arrow" /></svg>
+                <a href="CLIn-boards.html">
+                  <svg>
+                    <use xlink:href="#arrow" />
+                  </svg>
+                </a>
               </div>
             </div>
             <h3 class="heading-xs semibold">CLIn Boards</h3>
@@ -151,7 +163,11 @@
                 <svg><use xlink:href="#github" /></svg>
               </div>
               <div class="icon-corner">
-                <svg><use xlink:href="#arrow" /></svg>
+                <a href="CLIvia-Generator.html">
+                  <svg>
+                    <use xlink:href="#arrow" />
+                  </svg>
+                </a>
               </div>
             </div>
             <h3 class="heading-xs semibold">CLIvia Generator</h3>
