add: team and team images

--- a/CalenCLI.html
+++ b/CalenCLI.html
@@ -104,11 +104,44 @@
     <section class="section-padding-md bg-color-background">
       <div class="container-lg">
         <h2 class="heading-lg semibold">
-          Our team 
+          The team
         <p class="article-par text-xl light">
           Odio nisi, lectus dis nulla. Ultrices maecenas vitae rutrum dolor ultricies donec risus sodales. Tempus quis et.
         </p>
-        
+        <div class="page-team__content">
+          <div class="page-team__card">
+            <img src="assets/Images/teams/CalenCLI/k-c-q.png">
+            <p class="text-lg semibold ">Kevin Carlos Quispe</p>
+            <div class="social-media-icons-name">
+              <i class="ri-github-fill ri-xs"></i>
+              <i class="ri-linkedin-box-fill ri-xs"></i>
+            </div>
+          </div>
+          <div class="page-team__card">
+            <img src="assets/Images/teams/CalenCLI/k-r-n-1.png">
+            <p class="text-lg semibold ">Kevin Robles </p>
+            <div class="social-media-icons-name">
+              <i class="ri-github-fill ri-xs"></i>
+              <i class="ri-linkedin-box-fill ri-xs"></i>
+            </div>
+          </div>
+          <div class="page-team__card">
+            <img src="assets/Images/teams/CalenCLI/l-h-1.png">
+            <p class="text-lg semibold ">Luis Huayta</p>
+            <div class="social-media-icons-name">
+              <i class="ri-github-fill ri-xs"></i>
+              <i class="ri-linkedin-box-fill ri-xs"></i>
+            </div>
+          </div>
+          <div class="page-team__card">
+            <img src="assets/Images/teams/CalenCLI/IMG JR-1.jpg">
+            <p class="text-lg semibold ">Jorge Rosano</p>
+            <div class="social-media-icons-name">
+              <i class="ri-github-fill ri-xs"></i>
+              <i class="ri-linkedin-box-fill ri-xs"></i>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     <footer class="footer">
