--- a/Pokemon-Ruby.html
+++ b/Pokemon-Ruby.html
@@ -104,10 +104,43 @@
     <section class="section-padding-md bg-color-background">
       <div class="container-lg">
         <h2 class="heading-xl regular">
-          Hi! I'm 
+          The team
         <p class="text-xl light">
           Lorem ipsum
         </p>
+        <div class="page-team__content">
+          <div class="page-team__card">
+            <img src="assets/Images/teams/Pokemon Ruby/a-t.png">
+            <p class="text-lg semibold ">Amanda Trigueros</p>
+            <div class="social-media-icons-name">
+              <i class="ri-github-fill ri-xs"></i>
+              <i class="ri-linkedin-box-fill ri-xs"></i>
+            </div>
+          </div>
+          <div class="page-team__card">
+            <img src="assets/Images/teams/CalenCLI/l-h-1.png">
+            <p class="text-lg semibold ">Wilder Castillo</p>
+            <div class="social-media-icons-name">
+              <i class="ri-github-fill ri-xs"></i>
+              <i class="ri-linkedin-box-fill ri-xs"></i>
+            </div>
+          </div>
+          <div class="page-team__card">
+            <img src="assets/Images/teams/CalenCLI/k-c-q.png">
+            <p class="text-lg semibold ">Odilón Catalán</p>
+            <div class="social-media-icons-name">
+              <i class="ri-github-fill ri-xs"></i>
+              <i class="ri-linkedin-box-fill ri-xs"></i>
+            </div>
+          </div>
+          <div class="page-team__card">
+            <img src="assets/Images/teams/CalenCLI/IMG JR-1.jpg">
+            <p class="text-lg semibold ">Jorge Rosano</p>
+            <div class="social-media-icons-name">
+              <i class="ri-github-fill ri-xs"></i>
+              <i class="ri-linkedin-box-fill ri-xs"></i>
+            </div>
+          </div>
       </div>
     </section>
 
