--- a/CLIvia-Generator.html
+++ b/CLIvia-Generator.html
@@ -103,10 +103,20 @@
     <section class="section-padding-md bg-color-background">
       <div class="container-lg">
         <h2 class="heading-xl regular">
-          Hi! I'm 
+          The team
         <p class="text-xl light">
           Lorem ipsum
         </p>
+        <div class="page-team__content">
+          <div class="page-team__card">
+            <img src="assets/Images/teams/CalenCLI/IMG JR-1.jpg">
+            <p class="text-lg semibold ">Jorge Rosano</p>
+            <div class="social-media-icons-name">
+              <i class="ri-github-fill ri-xs"></i>
+              <i class="ri-linkedin-box-fill ri-xs"></i>
+            </div>
+          </div>
+      </div>
       </div>
     </section>
 
