chore: svg margin adjustment and art pages cleanup

--- a/CalenCLI.html
+++ b/CalenCLI.html
@@ -78,21 +78,21 @@
         <div class="page-article__content">
           <div class="article-built__card">
             <i class="ri-terminal-line ri-xl"></i>
-            <h2 class="art-h2 text-lg semibold">On terminal</h2>
+            <h2 class="text-lg semibold">On terminal</h2>
             <p class="text-md light">
               Odio nisi, lectus dis nulla. Ultrices maecenas vitae rutrum dolor ultricies donec risus sodales. Tempus quis et.
             </p>
           </div>
           <div class="article-built__card">
             <svg><use xlink:href="#ruby" /></svg>  
-            <h2 class="art-h2 text-lg semibold">Ruby</h2>  
+            <h2 class="text-lg semibold">Ruby</h2>  
             <p class="text-md light">
               Odio nisi, lectus dis nulla. Ultrices maecenas vitae rutrum dolor ultricies donec risus sodales. Tempus quis et.
             </p>        
           </div>
           <div class="article-built__card">
             <i class="ri-github-fill ri-xl"></i>
-            <h2 class="art-h2 text-lg semibold">Professional Version Control</h2>
+            <h2 class="text-lg semibold">Professional Version Control</h2>
             <p class="text-md light">
               Odio nisi, lectus dis nulla. Ultrices maecenas vitae rutrum dolor ultricies donec risus sodales. Tempus quis et.
             </p>
