--- a/portfolio.html
+++ b/portfolio.html
@@ -255,7 +255,7 @@
           2.3824 17.9311C2.50441 17.8787 2.61475 17.8025 2.707 17.707L1.293
           16.293ZM17 1V13H19V1H17ZM18 0H6V2H18V0ZM17.293 0.293L1.293
           16.293L2.707 17.707L18.707 1.707L17.293 0.293Z"
-            fill="#BE185D"
+            fill="var(--primary)"
           />
         </symbol>
       </svg>
